Переход с sql lite на postgresql
